--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -185,7 +185,7 @@ jobs:
   run-integration-tests:
     needs:
       - list-integration-tests
-      - build-binaries
+      - build-packages
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
@@ -214,7 +214,7 @@ jobs:
   run-e2e-tests:
     needs:
       - list-e2e-tests
-      - build-binaries
+      - build-packages
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
