--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -131,7 +131,39 @@ jobs:
 
       - name: Set matrix for next job
         id: set-matrix
-        run: echo "matrix={\"spec\":${{ steps.list.outputs.files }}}" >> "$GITHUB_OUTPUT"
+        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+
+      - name: Debug
+        run: echo ${{fromJson(steps.set-matrix.outputs.matrix)}}
+
+  run-e2e-tests:
+    needs:
+      - list-e2e-tests
+      - build-packages
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+
+      - name: Download work archive
+        uses: actions/download-artifact@v2
+        with:
+          name: work-ubuntu-latest
+          path: ${{ runner.temp }}/work.tar.gz
+      
+      - name: Restore work directory
+        run: tar -xzf ${{ runner.temp }}/work.tar.gz
+
+      - name: Run tests
+        env:
+          PATH: ${{ github.workspace }}/taq:$PATH
+        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }} 
 
   list-integration-tests:
     runs-on: ubuntu-latest
@@ -147,7 +179,39 @@ jobs:
 
       - name: Set matrix for next job
         id: set-matrix
-        run: echo "matrix={\"spec\":${{ steps.list.outputs.files }}}" >> "$GITHUB_OUTPUT"
+        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
+
+      - name: Debug
+        run: echo ${{fromJson(steps.set-matrix.outputs.matrix)}}
+
+  run-integration-tests:
+    needs:
+      - list-integration-tests
+      - build-packages
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/gallium
+
+      - name: Download work archive
+        uses: actions/download-artifact@v2
+        with:
+          name: work-ubuntu-latest
+          path: ${{ runner.temp }}/work.tar.gz
+        
+      - name: Restore work directory
+        run: tar -xzf ${{ runner.temp }}/work.tar.gz
+
+      - name: Run tests
+        env:
+          PATH: ${{ github.workspace }}/taq:$PATH
+        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}
 
   # Run all unit tests
   run-unit-tests:
@@ -180,62 +244,4 @@ jobs:
           CWD=$(pwd)
           export PATH=$PATH:$CWD
           export DENO_DIR=$CWD/.deno
-          npm run test:unit -w tests
-
-  run-integration-tests:
-    needs:
-      - list-integration-tests
-      - build-packages
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
-
-      - name: Download work archive
-        uses: actions/download-artifact@v2
-        with:
-          name: work-ubuntu-latest
-          path: ${{ runner.temp }}/work.tar.gz
-        
-      - name: Restore work directory
-        run: tar -xzf ${{ runner.temp }}/work.tar.gz
-
-      - name: Run tests
-        env:
-          PATH: ${{ github.workspace }}/taq:$PATH
-        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}        
-
-  run-e2e-tests:
-    needs:
-      - list-e2e-tests
-      - build-packages
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: lts/gallium
-
-      - name: Download work archive
-        uses: actions/download-artifact@v2
-        with:
-          name: work-ubuntu-latest
-          path: ${{ runner.temp }}/work.tar.gz
-      
-      - name: Restore work directory
-        run: tar -xzf ${{ runner.temp }}/work.tar.gz
-
-      - name: Run tests
-        env:
-          PATH: ${{ github.workspace }}/taq:$PATH
-        run: npm ci && npm run test:e2e -w tests ${{ matrix.spec }}
+          npm run test:unit -w tests     
