--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "taqueria-vscode",
+	"name": "taqueria",
 	"displayName": "Taqueria",
 	"description": "A better way to build on Tezos",
 	"publisher": "PinnacleLabs",
