--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "taqueria",
-	"displayName": "Taqueria (by Pinancle Labs)",
+	"displayName": "Taqueria (by Pinnacle Labs)",
 	"description": "A better way to build on Tezos",
 	"publisher": "PinnacleLabs",
 	"version": "0.28.7",
