Adjust version # that is used for pre-release builds

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -150,8 +150,10 @@ jobs:
       # Publish packages using lerna publish with commit as version
       - name: Publish packages
         run: |
-          VERSION="${{ github.sha }}}"
-          echo $VERSION
+          npm version 
+          GIT_VERSION="${{ github.sha }}}"
+          PKG_VERSION=$(npm version --json | jq -r '.["@taqueria/taqueria"]')
+          VERSION="${PKG_VERSION}-${GIT_VERSION}"
           npx lerna version $VERSION --yes --force-publish --no-git-tag-version --exact
           npx lerna publish from-package --yes --no-git-tag-version --exact --registry https://npm.pkg.github.com/pinnacle-labs
 
