--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -150,9 +150,8 @@ jobs:
       # Publish packages using lerna publish with commit as version
       - name: Publish packages
         run: |
-          npm version 
           GIT_VERSION="${{ github.sha }}}"
-          PKG_VERSION=`npm version --json | jq -r '.["@taqueria/taqueria"]')`
+          PKG_VERSION=`npm version --json | jq -r '.["@taqueria/taqueria"]'`
           VERSION="${PKG_VERSION}-${GIT_VERSION}"
           echo $VERSION
           npx lerna version $VERSION --yes --force-publish --no-git-tag-version --exact
