Commit changes when publishing npm packages

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -155,6 +155,10 @@ jobs:
           VERSION="${PKG_VERSION}-${GIT_VERSION}"
           echo $VERSION
           npx lerna version $VERSION --yes --force-publish --no-git-tag-version --no-commit-hooks --no-push --exact
+          git add package.json taqueria*/package.json tests/package.json
+          git commit -m "Temporary commit for publishing packages"
+          rm -rf .deno
+          rm work.tar.gz 
           npx lerna publish from-package --yes --no-git-tag-version --exact --registry https://npm.pkg.github.com/pinnacle-labs
 
   list-e2e-tests:
