--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -158,6 +158,8 @@ jobs:
           rm work.tar.gz 
           git config --global user.email "you@example.com"
           git config --global user.name "Michael Weichert"
+          git add .
+          git commit -m "Pre version bump"
           npx lerna version $VERSION --yes --force-publish --no-push --exact
           echo "Updated versions"
           npx lerna publish from-package --yes --no-push --exact --registry https://npm.pkg.github.com/pinnacle-labs
