Adjust @taqueria/analytics to be private package

--- a/taqueria-analytics/package.json
+++ b/taqueria-analytics/package.json
@@ -5,6 +5,7 @@
 	"main": "./index.js",
 	"source": "./index.ts",
 	"module": "./index.mjs",
+	"private": true,
 	"exports": {
 		".": "./index.js",
 		"./types": "./types.js"
