Use PAT when publishing

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -131,6 +131,8 @@ jobs:
   publish-packages:
     needs: build-packages
     runs-on: ubuntu-latest
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.GH_PAT }}
     steps:
       - name: Download work archive
         uses: actions/download-artifact@v2
